[package]
name = "chart-parser"
version = "2.0.0"
edition = "2021"

[workspace]
members = [
  "faa"
]

[dependencies]
anyhow = "1.0"
chrono = "0.4"
faa = { path = "faa" }
futures = "0.3"
reqwest = { version = "0.11" }
serde = {version = "1.0.152", features = ["derive"]}
serde-xml-rs = "0.6"
sqlx = { version = "0.7", features = [ "mysql", "runtime-tokio", "tls-rustls" ] }
tokio = { version = "1.20.0", features = ["rt", "macros"]}
