[package]
name = "chart-parser"
version = "2.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
dotenv = "0.15.0"
itertools = "0.14.0"
log = "0.4.25"
pretty_env_logger = "0.5.0"
reqwest = "0.12.12"
serde = {version = "1.0.207", features = ["derive"] }
serde-xml-rs = "0.6.0"
sqlx = { version = "0.8.3", features = [ "mysql", "runtime-tokio", "tls-rustls" ] }
tokio = { version = "1.43.0", features = ["full"] }
